kubernetes/apps/firefox/httproute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: firefox
  namespace: apps
spec:
  parentRefs:
    - name: homeserver-gateway
      namespace: infra
  hostnames:
    - "firefox.k8s.local"
  rules:
    - backendRefs:
        - name: firefox
          port: 3000
